# gdcm

./: .gitignore  Cargo.toml  LICENSE  README.md  WEB_INTERFACE_GUIDE.md  wrangler.toml
.github/: FUNDING.yml
public/: index.html
src/: lib.rs  types.rs
src/handlers/: basic.rs  commit.rs  mod.rs
src/routes/: mod.rs
src/services/: gemini.rs  mod.rs
